# wasm-audio-gen

./: Cargo.toml  build-wasm.sh
src/: build_generator.rs  build_nodes.rs  generator.rs  graph.rs  js_node.rs  lib.rs  macros.rs  metadata.rs  nodes.rs  sequencer.rs
src/deserializable/: js_node.rs  metadata.rs  mod.rs  nodes.rs  sequence.rs  source_graph.rs
