[package]
name = "wasm-audio-gen"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
audio_gen = { path = "/Users/ovikd/Documents/Code/Rust/audio-gen" }
console_error_panic_hook = "0.1.7"
serde = "1.0.227"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.103"
web-sys = { version = "0.3.82", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
debug = true
